<resources>
    <string name="app_name">potato</string>
    <string name="welcome_text">欢迎页面，%1$d秒后自动跳转</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="query_calendar_events">查询日历事件</string>
    <string name="add_calendar_event">添加日历事件</string>
    <string name="delete_calendar_event">删除日历事件</string>
    <string name="update_calendar_event">更新日历事件</string>
    <string name="events_count">日历中事件总数: %1$d</string>
    <string name="empty">""</string>
    <string name="tip_input_title">请输入事件标题</string>
    <string name="text_start_time">开始时间</string>
    <string name="text_end_time">结束时间</string>
    <string name="text_all_day">全天事件</string>
    <string name="text_remind">提醒</string>
    <string name="text_repeat">重复</string>
    <string name="text_account">日历账户</string>
    <string name="text_timezone">时区</string>
    <string name="hint_location">请输入地点</string>
    <string name="hint_description">请输入备注</string>
    <string name="text_calendar_event_info">事件详情</string>


    <string name="calendar_id">CalendarID:%1$s</string>
    <string name="calendar_display_name">CalendarDisplayName:%1$s</string>
    <string name="calendar_account_name">CalendarAccountName:%1$s</string>
    <string name="event_title">EventTitle:%1$s</string>
    <string name="event_id">EventID:%1$s</string>
    <string name="event_all_day">EventAllDay:%1$s</string>
    <string name="event_timezone">EventTimeZone:%1$s</string>
    <string name="event_description">EventDescription:%1$s</string>
    <string name="event_dirty">EventDirty:%1$s</string>
    <string name="event_dt_start">EventStart:%1$s</string>
    <string name="event_dt_end">EventEnd:%1$s</string>
    <string name="event_dt_r_rule">EventRRule:%1$s</string>
    <string name="event_duration">EventDuration:%1$s</string>
    <string name="event_location">EventLocation:%1$s</string>
    <string name="delete_event_or_not">删除该事件吗 ?</string>
    <string name="positive_button_text">确认</string>
    <string name="negative_button_text">取消</string>
    <string name="cal_delete_popup_window_title">我是删除弹窗的标题</string>
    <string name="calendar">Calendar</string>
    <string name="view">View</string>
    <string name="gallery">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="todo">TODO</string>
    <string name="tools">Tools</string>
    <string name="communicate">Communicate</string>
    <string name="text_start">开始</string>
    <string name="text_add">添加</string>
    <string name="text_remove">移除</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="task_count">待办事项: %1$d</string>
    <string name="long_text">待办事项: %1$d待办事项: %1$d待办事项: %1$d待办事项: %1$d待办事项: %1$d待办事项: %1$d待办事项: %1$d待办事项: %1$d待办事项: %1$d待办事项: %1$d待办事项: %1$d待办事项: %1$d待办事项: %1$d待办事项: %1$d待办事项: %1$d待办事项: %1$d待办事项: %1$d待办事项: %1$d待办事项: %1$d待办事项: %1$d待办事项: %1$d待办事项: %1$d待办事项: %1$d待办事项: %1$d待办事项: %1$d待办事项: %1$d</string>
</resources>
